--- a/mvc4-webapi-backbone/packages.config
+++ b/mvc4-webapi-backbone/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Backbone.js" version="0.9.2" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
-  <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
+  <package id="jQuery" version="1.7.2" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net40" />
@@ -21,5 +22,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net40" />
+  <package id="underscore.js" version="1.3.3" targetFramework="net40" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
 </packages>
